--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ rel="stylesheet">
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                        <h2>Three Ways That Art Stimulates Our Minds</h2>
-                        <h3>Read Time: 10 Minutes</h3>
+                        <h2> All The Ways That Art Stimulates Our Minds</h2>
+                        <h3>Read Time: 60 Minutes</h3>
                     </header>
                     <main>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis cum minima quo aspernatur velit voluptate molestiae illum, blanditiis et tenetur ex voluptas illo praesentium consectetur, reprehenderit maxime culpa commodi. Placeat totam enim nisi possimus et harum tempore, delectus facere molestiae reiciendis veritatis, inventore voluptatem! Harum ipsa corrupti expedita inventore animi possimus eum doloribus, nam minus voluptatum quisquam cum dolore officiis placeat rerum eaque in sunt tempore suscipit reiciendis debitis mollitia excepturi ex sequi! Corporis obcaecati officia laudantium officiis, accusamus enim nulla itaque asperiores dolore soluta quis aut nostrum veniam quisquam repudiandae reprehenderit vel explicabo? Consequuntur provident reiciendis quibusdam sit ipsum.</p>
@@ -81,8 +81,8 @@ rel="stylesheet">
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                        <h2>Three Ways That Art Stimulates Our Minds</h2>
-                        <h3>Read Time: 10 Minutes</h3>
+                        <h2>All The Ways That Art Stimulates Our Minds</h2>
+                        <h3>Read Time: 60 Minutes</h3>
                     </header>
                     <main>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis cum minima quo aspernatur velit voluptate molestiae illum, blanditiis et tenetur ex voluptas illo praesentium consectetur, reprehenderit maxime culpa commodi. Placeat totam enim nisi possimus et harum tempore, delectus facere molestiae reiciendis veritatis, inventore voluptatem! Harum ipsa corrupti expedita inventore animi possimus eum doloribus, nam minus voluptatum quisquam cum dolore officiis placeat rerum eaque in sunt tempore suscipit reiciendis debitis mollitia excepturi ex sequi! Corporis obcaecati officia laudantium officiis, accusamus enim nulla itaque asperiores dolore soluta quis aut nostrum veniam quisquam repudiandae reprehenderit vel explicabo? Consequuntur provident reiciendis quibusdam sit ipsum.</p>
@@ -106,8 +106,8 @@ rel="stylesheet">
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                        <h2>Three Ways That Art Stimulates Our Minds</h2>
-                        <h3>Read Time: 10 Minutes</h3>
+                        <h2>All The Ways That Art Stimulates Our Minds</h2>
+                        <h3>Read Time: 60 Minutes</h3>
                     </header>
                     <main>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis cum minima quo aspernatur velit voluptate molestiae illum, blanditiis et tenetur ex voluptas illo praesentium consectetur, reprehenderit maxime culpa commodi. Placeat totam enim nisi possimus et harum tempore, delectus facere molestiae reiciendis veritatis, inventore voluptatem! Harum ipsa corrupti expedita inventore animi possimus eum doloribus, nam minus voluptatum quisquam cum dolore officiis placeat rerum eaque in sunt tempore suscipit reiciendis debitis mollitia excepturi ex sequi! Corporis obcaecati officia laudantium officiis, accusamus enim nulla itaque asperiores dolore soluta quis aut nostrum veniam quisquam repudiandae reprehenderit vel explicabo? Consequuntur provident reiciendis quibusdam sit ipsum.</p>
